--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Animais Fantásticos</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta nome="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href='css/style.css' />
