--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="menu"> 
+    <nav class="menu azul"> 
         <ul>
             <li><a href="@animais">animais</a></li>
             <li><a href="@faq">Faq</a></li>
@@ -20,11 +20,11 @@
             <li><a href="https://www.origamid.com/">Dev →</a></li>
         </ul>
     </nav>
-    <section class='grid-section animais' id='animais'>
+    <section class='grid-section animais' id='animais' data-texto="teste">
         <h1 class="titulo">ANIMAIS <br>FANTÁSTICOS</h1>
         <ul class="animais-lista">
             <li>
-                <img src="img/imagem1.jpg">
+                <img src="img/imagem1.jpg" alt="raposa">
             </li>
             <li>
                 <img src="img/imagem2.jpg">
@@ -109,7 +109,7 @@
             <p>Todos os direitos reservados.</p>
         </footer>
 
-    <script src='main.js'></script>
+    <script src='script.js'></script>
 </body>
 
 </html>
